# pebbles-core

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  PHASE_A_DESIGN_2026-04-25.md  README.md  TRIAGE_2026-04-23.md  docker-compose.yml  pyproject.toml
examples/: config.yaml
pebbles/: __init__.py  compat.py  config.py  engine.py  log.py  matcher.py  models.py  storage.py
pebbles/cli/: __init__.py  main.py
pebbles/core/: __init__.py  _supabase.py  approval.py  breakers.py  llm.py  metrics.py  principal.py  queue.py  rater.py  storage.py
pebbles/delivery/: __init__.py  email.py  telegram.py
pebbles/experimental/: __init__.py  context_bridge.py  entity_extract.py  recent_context.py
pebbles/sources/: __init__.py  hackernews.py  letterboxd.py  reddit.py  rss.py  youtube.py
tests/: test_approval.py  test_breakers.py  test_engine.py  test_llm.py  test_matcher.py  test_metrics.py  test_principal.py  test_queue.py  test_rater.py  test_storage_protocol.py  test_v02_composition.py
tests/experimental/: test_context_bridge.py
