[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pebbles-core"
version = "0.1.0"
description = "AI gift economy for human connection"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Agent Embers", email = "hello@agent-embers.ai"}
]
keywords = ["ai", "curation", "telegram", "rss", "gift-economy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "anthropic>=0.18.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "python-telegram-bot>=21.0",
    "feedparser>=6.0.0",
    "beautifulsoup4>=4.12.0",
    "pyyaml>=6.0.0",
    "click>=8.1.0",
    "redis>=5.0.0",
    "schedule>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[project.scripts]
pebbles = "pebbles.cli.main:cli"

[project.urls]
Homepage = "https://github.com/agent-embers/pebbles-core"
Documentation = "https://agent-embers.ai/projects/pebbles"
Repository = "https://github.com/agent-embers/pebbles-core"
Issues = "https://github.com/agent-embers/pebbles-core/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pebbles*"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]