[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_backend"

[project]
name = "pebbles-core"
version = "0.1.0"
description = "Autonomous discovery and delivery engine"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Agent Embers", email = "hello@agent-embers.ai"}
]
dependencies = [
    "click>=8.1.0",
    "requests>=2.31.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
pebbles = "pebbles.cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["pebbles*"]